@@ -5,7 +5,7 @@ Isabelle2005 is now available.
 
 This release provides substantial advances over Isabelle2004, see the
 first 1000 lines of NEWS in the distribution for more details.  Some
-notable highlights are:
+notable features are:
 
 * Interpretation of locale expressions in theories, locales, and proof
 contexts.
@@ -22,6 +22,9 @@ intro/elim/simp rules etc.).
 * Support for Unicode proof documents (UTF-8).
 
 * Major internal reorganizations and performance improvements.
+
+* 'defs': more checks for overloading, but less checks for cyclic
+dependencies!
 
 
 You may get Isabelle2005 from the following mirror sites:
