@@ -45,7 +45,7 @@
           </p>
 
         <h2>Now available: Isabelle 2005</h2>
-         <p>Some notable highlights:</p>
+         <p>Some notable features:</p>
               <ul>
 	      <li>Interpretation of locale expressions in theories, locales, and proof contexts.</li>
 	      <li>Substantial library improvements (HOL, HOL-Complex, HOLCF).</li>
@@ -54,6 +54,9 @@
 	      <li>Commands for generating adhoc draft documents.</li>
 	      <li>Support for Unicode proof documents (UTF-8).</li>
 	      <li>Major internal reorganizations and performance improvements.</li>
+              <li>More well-formedness checks of overloaded
+                  definitions, but fails to recognize certain ill-formed definitions
+                  that Isabelle2004 would have rejected outright!</li>
 	      </ul>
 
 <p><a href="//dist/Isabelle/NEWS">[Cumulative NEWS]</a></p>
